fix(ajapaik): notify me of follow up comments checkbox not visible

--- a/ajapaik/ajapaik/static/css/ajapaik-style.css
+++ b/ajapaik/ajapaik/static/css/ajapaik-style.css
@@ -2233,3 +2233,9 @@ div.gm-style-mtc > div:nth-of-type(2) > div > label {
   width: 200px;
   height: 200px;
 }
+
+
+#id_followup {
+  z-index: auto;
+  opacity: 1;
+}
